tests/ui/sized/recursive-type-thin.stderr
error[E0275]: overflow evaluating the requirement `<Foo<()> as Pointee>::Metadata == ()`
  --> $DIR/recursive-type-thin.rs:10:18
   |
LL |     type Assoc = Foo<()>;
   |                  ^^^^^^^
   |
   = note: required for `<() as A>::Assoc` to implement `Thin`
note: required by a bound in `A::Assoc`
  --> $DIR/recursive-type-thin.rs:6:17
   |
LL |     type Assoc: std::ptr::Thin;
   |                 ^^^^^^^^^^^^^^ required by this bound in `A::Assoc`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0275`.
